--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
-    "@supabase/supabase-js": "^2.43.4",
     "react": "18.2.0",
     "react-native": "0.74.2",
-    "react-native-elements": "^3.4.3",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-elements": "^3.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
